--- a/WordGenius/WordGenius.csproj
+++ b/WordGenius/WordGenius.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Npgsql" Version="7.0.4" />
   </ItemGroup>
 
